--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^2.3.0",
-    "astro": "^2.7.2"
+    "astro": "^2.7.2",
+    "astro-i18next": "1.0.0-beta.21"
   },
   "devDependencies": {
     "sass": "^1.63.6"
